commit google search inspect

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" style="scroll-behavior: smooth;"><head><meta charset="utf-8"><title>Landscape Photography</title> <!-- page title -->
 <meta name="robots" content="index,follow"><meta name="description" content="Selwyn Hoeks and Coline Boonman have specialized in analog/digital landscape photography.">
+<meta name="google-site-verification" content="cjMFrQxSnQEQ6XJHpSIHLHMv0W5GgYsZI4MqZNbFdAQ" />
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
 <link rel="stylesheet" href="assets/css/styles.css"><script src="assets/js/fa0c9f63f66b.js"></script><script src="files/js/lazyload.js"></script>
 <script src="files/js/jquery.event.move.js"></script><script src="files/js/jquery.twentytwenty.js"></script><script src="files/js/swiper.min.js"></script>
