--- a/index.html
+++ b/index.html
@@ -134,6 +134,10 @@ border-radius:25px; border: 0px solid #c7ac7f; background-repeat: no-repeat; bac
 <div id="container"><br><main id="main" itemscope itemtype="http://schema.org/WebPageElement" itemprop="mainContentOfPage">
 <div class="inside"><div class="mod_article albums first block" id="article-593"><div class="article_inner">
 
+	<div class  = "card"><a class="card-link card-link--btn card-link--lightsepia" href="portfolio/2020/05.html"> <!-- add album link -->
+		<span class = "card-title" style="font-size: 90%;">Forest Glow</span></a><a   href="portfolio/2020/05.html"> <!-- add name & album link -->
+		<img src    = "portfolio/covers/2020_05.jpg" alt="Landscape Photography Series" /></a></div> <!-- add album cover -->
+			
 	<div class  = "card"><a class="card-link card-link--btn card-link--forestgreen" href="portfolio/2015/01.html"> <!-- add album link -->
 		<span class = "card-title" style="font-size: 90%;">Catching the Light</span></a><a   href="portfolio/2015/01.html"> <!-- add name & album link -->
 		<img src    = "portfolio/covers/2015_01.jpg" alt="Landscape Photography Series" /></a></div> <!-- add album cover -->
