--- a/index.html
+++ b/index.html
@@ -16,17 +16,18 @@
 <div class="swiper-container swiper-container-5e67b7ba3e36e">
 	<div class="swiper-wrapper">
 		<div class="swiper-slide" style="background-image: url(portfolio/2019/Album_01_Yosemite/Yosemite_02_BW.jpg)"></div>
+		<div class="swiper-slide" style="background-image: url(portfolio/2020/Album_06_DrunenseDuinen/01_hq.jpg)"></div>
+		<div class="swiper-slide" style="background-image: url(portfolio/2010/Album_01_Noorwegen/1.jpg)"></div>
+		<div class="swiper-slide" style="background-image: url(portfolio/2015/Album_01_Lunteren/1.jpg)"></div>
+		
+		<!-- 
+		<div class="swiper-slide" style="background-image: url(portfolio/2020/Album_01_Ameland/Ameland_007.jpg)"></div>		
+		<div class="swiper-slide" style="background-image: url(portfolio/2019/Album_01_Yosemite/Yosemite_02_BW.jpg)"></div>
 		<div class="swiper-slide" style="background-image: url(portfolio/2020/Album_01_Ameland/Ameland_007.jpg)"></div>		
 		<div class="swiper-slide" style="background-image: url(portfolio/2020/Album_03_Veluwezoom/01_sepia.jpg)"></div>
 		<div class="swiper-slide" style="background-image: url(portfolio/2020/Album_04_HatertseVennen/01.jpg)"></div>
-		<div class="swiper-slide" style="background-image: url(portfolio/2010/Album_01_Noorwegen/1.jpg)"></div>
-		<div class="swiper-slide" style="background-image: url(portfolio/2015/Album_01_Lunteren/1.jpg)"></div>
-		<!-- 
-		<div class="swiper-slide" style="background-image: url(portfolio/2019/Album_01_Yosemite/Yosemite_02_BW.jpg)"></div>
-		<div class="swiper-slide" style="background-image: url(portfolio/2019/Album_01_Yosemite/Yosemite_03_BW.jpg)"></div>
-		<div class="swiper-slide" style="background-image: url(portfolio/2019/Album_01_Yosemite/Yosemite_04_BW.jpg)"></div>
-		<div class="swiper-slide" style="background-image: url(portfolio/2019/Album_01_Yosemite/Yosemite_05_BW.jpg)"></div>
 		-->
+
 </div><div class="swiper-button-prev"></div><div class="swiper-button-next"></div></div>
 <script>new Swiper('.swiper-container-5e67b7ba3e36e',{loop:!0,speed:1000,pagination:{el:'.swiper-container-5e67b7ba3e36e .swiper-pagination',clickable:!0},
 effect:'fade',autoplay:{delay:6000,},navigation:{nextEl:'.swiper-button-next',prevEl:'.swiper-button-prev',},})</script>
@@ -133,6 +134,14 @@ border-radius:25px; border: 0px solid #c7ac7f; background-repeat: no-repeat; bac
 <!-- Galleries -->
 <div id="container"><br><main id="main" itemscope itemtype="http://schema.org/WebPageElement" itemprop="mainContentOfPage">
 <div class="inside"><div class="mod_article albums first block" id="article-593"><div class="article_inner">
+
+	<div class  = "card"><a class="card-link card-link--btn card-link--browngreen" href="portfolio/2020/07.html"> <!-- add album link -->
+		<span class = "card-title" style="font-size: 90%;">Green Shelter</span></a><a   href="portfolio/2020/07.html"> <!-- add name & album link -->
+		<img src    = "portfolio/covers/2020_07.jpg" alt="Landscape Photography Series" /></a></div> <!-- add album cover -->
+
+	<div class  = "card"><a class="card-link card-link--btn card-link--sunriseorange" href="portfolio/2020/06.html"> <!-- add album link -->
+		<span class = "card-title" style="font-size: 90%;">Morning Bloom</span></a><a   href="portfolio/2020/06.html"> <!-- add name & album link -->
+		<img src    = "portfolio/covers/2020_06.jpg" alt="Landscape Photography Series" /></a></div> <!-- add album cover -->
 
 	<div class  = "card"><a class="card-link card-link--btn card-link--darkgrey" href="portfolio/2012/01.html"> <!-- add album link -->
 		<span class = "card-title" style="font-size: 90%;">Blue Mountains</span></a><a   href="portfolio/2012/01.html"> <!-- add name & album link -->
