rotating banner varying with screen width

--- a/index.html
+++ b/index.html
@@ -15,17 +15,11 @@
 <div class="custom"><div id="swiper"><div class="inside"><div class="mod_article first last block" id="article-589"><div class="article_inner">
 <div class="swiper-container swiper-container-5e67b7ba3e36e">
 	<div class="swiper-wrapper">
-		<div class="swiper-slide" style="background-image: url(portfolio/2019/Album_01_Yosemite/Yosemite_02_BW.jpg)"></div>
-		<div class="swiper-slide" style="background-image: url(portfolio/2020/Album_06_DrunenseDuinen/01_hq.jpg)"></div>
-		<div class="swiper-slide" style="background-image: url(portfolio/2010/Album_01_Noorwegen/1.jpg)"></div>
-		<div class="swiper-slide" style="background-image: url(portfolio/2015/Album_01_Lunteren/1.jpg)"></div>
-		
-		<!-- 
-		<div class="swiper-slide" style="background-image: url(portfolio/2020/Album_01_Ameland/Ameland_007.jpg)"></div>		
-		<div class="swiper-slide" style="background-image: url(portfolio/2019/Album_01_Yosemite/Yosemite_02_BW.jpg)"></div>
-		<div class="swiper-slide" style="background-image: url(portfolio/2020/Album_01_Ameland/Ameland_007.jpg)"></div>		
-		<div class="swiper-slide" style="background-image: url(portfolio/2020/Album_03_Veluwezoom/01_sepia.jpg)"></div>
-		<div class="swiper-slide" style="background-image: url(portfolio/2020/Album_04_HatertseVennen/01.jpg)"></div>
+		<div id="Rotating_banner1" class="swiper-slide"></div>
+		<div id="Rotating_banner2" class="swiper-slide"></div>
+		<!--
+		<div id="Rotating_banner3" class="swiper-slide"></div>
+		<div id="Rotating_banner4" class="swiper-slide"></div>
 		-->
 
 </div><div class="swiper-button-prev"></div><div class="swiper-button-next"></div></div>
