--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
 <link rel="stylesheet" href="assets/css/styles.css"><script src="assets/js/fa0c9f63f66b.js"></script><script src="files/js/lazyload.js"></script>
 <script src="files/js/jquery.event.move.js"></script><script src="files/js/jquery.twentytwenty.js"></script><script src="files/js/swiper.min.js"></script>
 <script src="files/js/default.js"></script><script src="files/pandalocker/jquery.ui.highlight.min.js"></script>
-<script src="files/pandalocker/pandalocker.2.3.1.min.js"></script><script src="files/js/locker-userscript.js"></script></head>
+<script src="files/pandalocker/pandalocker.2.3.1.min.js"></script><script src="files/js/locker-userscript.js"></script>
+<script>window.onload=function() {document.getElementById('loading-mask').style.display='none';}</script>
+</head>
 
 <!-- ################################### BODY-->
 <body id="top" class="portfolio home"  itemscope itemtype="http://schema.org/WebPage">
+<div class="loading-mask" id="loading-mask">Loading page...</div>
 
 <!-- ----------- BANNER -->
 <div class="custom"><div id="swiper"><div class="inside"><div class="mod_article first last block" id="article-589"><div class="article_inner">
