--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 <script src="files/js/jquery.event.move.js"></script><script src="files/js/jquery.twentytwenty.js"></script><script src="files/js/swiper.min.js"></script>
 <script src="files/js/default.js"></script><script src="files/pandalocker/jquery.ui.highlight.min.js"></script>
 <script src="files/pandalocker/pandalocker.2.3.1.min.js"></script><script src="files/js/locker-userscript.js"></script>
-<script>window.onload=function() {document.getElementById('loading-mask').style.display='none';}</script>
+<script>window.onload=function() {document.getElementById('loading-mask').style.display='none';document.getElementById('LOGO_ANIMATION').style.display='block';}</script>	
 </head>
 
 <!-- ################################### BODY-->
 <body id="top" class="portfolio home"  itemscope itemtype="http://schema.org/WebPage">
-<div class="loading-mask" id="loading-mask">Loading page...</div>
+<div class="loading-mask" id="loading-mask"></div>
 
 <!-- ----------- BANNER -->
 <div class="custom"><div id="swiper"><div class="inside"><div class="mod_article first last block" id="article-589"><div class="article_inner">
@@ -37,7 +37,7 @@ border-radius:25px; border: 0px solid #c7ac7f; background-repeat: no-repeat; bac
 <!-- ------------ Logo -->
 <div id="wrapper"><header id="header" itemscope itemtype="http://schema.org/WPHeader"><div class="inside">
 <!-- Animated logo! -->
-<div class = "LOGO_ANIMATION">
+<div class = "LOGO_ANIMATION" id="LOGO_ANIMATION">
 	<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" 
 	viewBox="0 0 349.13 83.63" style="enable-background:new 0 0 248.67 47.86;" xml:space="preserve">
 			<style type="text/css">
