--- a/index.html
+++ b/index.html
@@ -28,14 +28,8 @@
 </div><div class="swiper-button-prev"></div><div class="swiper-button-next"></div></div>
 <script>new Swiper('.swiper-container-5e67b7ba3e36e',{loop:!0,speed:1000,pagination:{el:'.swiper-container-5e67b7ba3e36e .swiper-pagination',clickable:!0},
 effect:'fade',autoplay:{delay:6000,},navigation:{nextEl:'.swiper-button-next',prevEl:'.swiper-button-prev',},})</script>
-<div class="ce_text last block" id="intro" ><a href="#scroll"><div style="color:white;background-color: black; background-color:white; height: 30px;
-width:35px; margin: auto; text-align: center;padding: 15px; font-weight: normal; text-decoration-color:rgba(255,255,255, 0.1);
-border-radius:25px; border: 0px solid #c7ac7f; background-repeat: no-repeat; background: url(files/images/icons/icon-down_white.svg) " >
-<span style="text-decoration-color:rgba(255,255,255, 0.1)"></span></div></a></div></div></div></div></div></div>
-<!-- ------------ end BANNER -->
-
-<!-- ------------ Logo -->
-<div id="wrapper"><header id="header" itemscope itemtype="http://schema.org/WPHeader"><div class="inside">
+<div class="ce_text last block" id="intro" ><a href="#scroll"><div style="color:white;height: 30px;width:35px; margin: auto; padding: 15px;" >
+	
 <!-- Animated logo! -->
 <div class = "LOGO_ANIMATION" id="LOGO_ANIMATION">
 	<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" 
@@ -121,12 +115,14 @@ border-radius:25px; border: 0px solid #c7ac7f; background-repeat: no-repeat; bac
 				C341.83,48.56,338.64,50.12,336.92,50.19z M333.57,46.22c2.26-0.78,4.99-2.96,5.62-4.68c0.23-0.7,0.16-1.4-0.39-1.56
 				c-0.86-0.23-3.35,0.78-4.68,4.06C333.72,44.89,333.57,45.59,333.57,46.22z"/>
 			</g>
-</svg>
-</div>
+</svg></div><span style="text-decoration-color:rgba(255,255,255, 0.1)"></span></div></a></div></div></div></div></div></div>
 <!-- end Animated logo! -->
+
+<div id="wrapper"><header id="header" itemscope itemtype="http://schema.org/WPHeader"><div class="inside">
 <a class="close-btn" href="javascript:void(0);"><span></span><span></span><span></span></a>
 <div class="mmenu"></div></div></header><div id="scroll" style="heigth: 100px"></div>
-<!-- ------------ end Logo -->
+<!-- ------------ end BANNER -->
+
 
 <!-- Galleries -->
 <div id="container"><br><main id="main" itemscope itemtype="http://schema.org/WebPageElement" itemprop="mainContentOfPage">
