--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 <div class="loading-mask" id="loading-mask"></div>
 
 <!-- ----------- BANNER -->
-<div class="custom"><div id="swiper"><div class="inside"><div class="mod_article first last block" id="article-589"><div class="article_inner">
-<div class="swiper-container swiper-container-5e67b7ba3e36e">
+<div class="custom" ><div id="swiper" style="height: 100vh; color: rgba(0, 0, 0, 0.5);"><div class="inside"><div class="mod_article first last block" id="article-589"><div class="article_inner">
+<div class="swiper-container swiper-container-5e67b7ba3e36e" style="height: 100vh;">
 	<div class="swiper-wrapper">
 		<div id="Rotating_banner1" class="swiper-slide"></div>
 		<div id="Rotating_banner2" class="swiper-slide"></div>
@@ -25,23 +25,24 @@
 		<div id="Rotating_banner4" class="swiper-slide"></div>
 		-->
 
-</div><div class="swiper-button-prev"></div><div class="swiper-button-next"></div></div>
+</div><div class="swiper-button-prev" style="display: none;"></div><div class="swiper-button-next" style="display: none;"></div></div>
+
 <script>new Swiper('.swiper-container-5e67b7ba3e36e',{loop:!0,speed:1000,pagination:{el:'.swiper-container-5e67b7ba3e36e .swiper-pagination',clickable:!0},
 effect:'fade',autoplay:{delay:6000,},navigation:{nextEl:'.swiper-button-next',prevEl:'.swiper-button-prev',},})</script>
-<div class="ce_text last block" id="intro" ><a href="#scroll"><div style="color:white;height: 30px;width:35px; margin: auto; padding: 15px;" >
+<div class="ce_text last block" id="intro" ><a href="#scroll"><div style="color:white;height: 40vh;width:35px; margin: auto; padding: 15px;" >
 	
 <!-- Animated logo! -->
 <div class = "LOGO_ANIMATION" id="LOGO_ANIMATION">
 	<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" 
 	viewBox="0 0 349.13 83.63" style="enable-background:new 0 0 248.67 47.86;" xml:space="preserve">
 			<style type="text/css">
-				.st0{fill:#fff;stroke:#FFFFFF;stroke-width:1;stroke-miterlimit:10;}
-				.st1{fill:none;stroke:none;stroke-width:1;stroke-miterlimit:10;}.st2{fill:none;stroke:none;stroke-width:1;stroke-miterlimit:10;}
-				.st3{fill:none;stroke:none;stroke-width:1;stroke-miterlimit:10;}.st4{fill:none;stroke:none;stroke-width:1;stroke-miterlimit:10;}			
-				.st5{fill:none;stroke:none;stroke-width:1;stroke-miterlimit:10;}.st6{fill:none;stroke:none;stroke-width:1;stroke-miterlimit:10;}
-				.st7{fill:none;stroke:none;stroke-width:1;stroke-miterlimit:10;}.st8{fill:none;stroke:none;stroke-width:1;stroke-miterlimit:10;}
-				.st9{fill:none;stroke:none;stroke-width:1;stroke-miterlimit:10;}.st10{fill:none;stroke:none;stroke-width:1;stroke-miterlimit:10;}							
-				.st11{fill:none;stroke:none;stroke-width:1;stroke-miterlimit:10;}.st12{fill:none;stroke:none;stroke-width:1;stroke-miterlimit:10;}																											
+				.st0{fill:#fff;stroke:#FFFFFF;stroke-width:2;stroke-miterlimit:10;}
+				.st1{fill:none;stroke:none;stroke-width:2;stroke-miterlimit:10;}.st2{fill:none;stroke:none;stroke-width:2;stroke-miterlimit:10;}
+				.st3{fill:none;stroke:none;stroke-width:2;stroke-miterlimit:10;}.st4{fill:none;stroke:none;stroke-width:2;stroke-miterlimit:10;}			
+				.st5{fill:none;stroke:none;stroke-width:2;stroke-miterlimit:10;}.st6{fill:none;stroke:none;stroke-width:2;stroke-miterlimit:10;}
+				.st7{fill:none;stroke:none;stroke-width:2;stroke-miterlimit:10;}.st8{fill:none;stroke:none;stroke-width:2;stroke-miterlimit:10;}
+				.st9{fill:none;stroke:none;stroke-width:2;stroke-miterlimit:10;}.st10{fill:none;stroke:none;stroke-width:2;stroke-miterlimit:10;}							
+				.st11{fill:none;stroke:none;stroke-width:2;stroke-miterlimit:10;}.st12{fill:none;stroke:none;stroke-width:2;stroke-miterlimit:10;}																											
 			</style>
 			<g>
 			<path class="st0" d="M49.88,15.99c0.7-3.3-0.87-5.56-4.87-6.26c-4.43-0.78-13.47,0.78-21.99,4.78c-7.3,3.48-14.95,8.78-16.34,14.78
@@ -115,7 +116,9 @@ effect:'fade',autoplay:{delay:6000,},navigation:{nextEl:'.swiper-button-next',pr
 				C341.83,48.56,338.64,50.12,336.92,50.19z M333.57,46.22c2.26-0.78,4.99-2.96,5.62-4.68c0.23-0.7,0.16-1.4-0.39-1.56
 				c-0.86-0.23-3.35,0.78-4.68,4.06C333.72,44.89,333.57,45.59,333.57,46.22z"/>
 			</g>
-</svg></div><span style="text-decoration-color:rgba(255,255,255, 0.1)"></span></div></a></div></div></div></div></div></div>
+</svg><div id="LandscapePhotography">Landscape Photography</div></div>
+<span style="text-decoration-color:rgba(255,255,255, 0.1)"></span></div></a></div></div></div></div></div></div>
+
 <!-- end Animated logo! -->
 
 <div id="wrapper"><header id="header" itemscope itemtype="http://schema.org/WPHeader"><div class="inside">
