--- a/index.html
+++ b/index.html
@@ -128,6 +128,10 @@ effect:'fade',autoplay:{delay:6000,},navigation:{nextEl:'.swiper-button-next',pr
 <div id="container"><br><main id="main" itemscope itemtype="http://schema.org/WebPageElement" itemprop="mainContentOfPage">
 <div class="inside"><div class="mod_article albums first block" id="article-593"><div class="article_inner">
 
+	<div class  = "card"><a class="card-link card-link--btn card-link--mossgreen" href="portfolio/2020/08.html"> <!-- add album link -->
+		<span class = "card-title" style="font-size: 90%;">Forest Ember</span></a><a   href="portfolio/2020/08.html"> <!-- add name & album link -->
+		<img src    = "portfolio/covers/2020_08.jpg" alt="Landscape Photography Series" /></a></div> <!-- add album cover -->
+
 	<div class  = "card"><a class="card-link card-link--btn card-link--browngreen" href="portfolio/2020/07.html"> <!-- add album link -->
 		<span class = "card-title" style="font-size: 90%;">Green Shelter</span></a><a   href="portfolio/2020/07.html"> <!-- add name & album link -->
 		<img src    = "portfolio/covers/2020_07.jpg" alt="Landscape Photography Series" /></a></div> <!-- add album cover -->
