--- a/portfolio/2020_08/page.html
+++ b/portfolio/2020_08/page.html
@@ -26,7 +26,7 @@
 <div style="margin-bottom: 0px; box-shadow: 0 0 9px rgba(82, 84, 86, 0.2); width: 100%;">
 	<div style="float: left; width: 47%; padding-right: 6%"><img src="3a.jpg" alt="Snow" style="width:100%"></div>
 	<div style="float: left; width: 47%;"><img src="3b.jpg" alt="Forest" style="width:100%"></div></div>
-<img class="lazyload" src="../../iframe/files/images/icons/placeholder.png" data-src="4.jpg" alt="Photo description"/>>
+<img class="lazyload" src="../../iframe/files/images/icons/placeholder.png" data-src="4.jpg" alt="Photo description"/>
 <div style="margin-bottom: 0px; box-shadow: 0 0 9px rgba(82, 84, 86, 0.2); width: 100%;">
 <div style="float: left; width: 47%; padding-right: 6%"><img src="5a.jpg" alt="Snow" style="width:100%"></div>
 <div style="float: left; width: 47%;"><img src="5b.jpg" alt="Forest" style="width:100%"></div></div>
