--- a/portfolio/2020_05.html
+++ b/portfolio/2020_05.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="../assets/bootstrap/css/bootstrap.min.css"><link rel="stylesheet" href="../assets/mobirise/css/style.css">
   <link rel="stylesheet" href="../assets/mobirise-gallery/style.css"><link rel="stylesheet" href="../assets/mobirise-slider/style.css">
   <link rel="preload" as="style" href="../assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="../assets/mobirise/css/mbr-additional.css" type="text/css">
-  <style>
+  <!-- <style>
     #iframe1{height: 7500px;}
     @media (min-width:200px){#iframe1{height: 1900px;}}
     @media (min-width:300px){#iframe1{height: 2700px;}}
@@ -22,7 +22,27 @@
     @media (min-width:1000px){#iframe1{height: 6000px;}}
     @media (min-width:1200px){#iframe1{height: 6500px;}}
     @media (min-width:1460px){#iframe1{height: 7500px;}}
-</style>
+</style> -->
+<script>
+    function getDocHeight(doc) {
+    doc = doc || document;
+    // stackoverflow.com/questions/1145850/
+    var body = doc.body, html = doc.documentElement;
+    var height = Math.max( body.scrollHeight, body.offsetHeight, 
+        html.clientHeight, html.scrollHeight, html.offsetHeight );
+    return height;
+    }
+    function setIframeHeight(id) {
+    var ifrm = document.getElementById(id);
+    var doc = ifrm.contentDocument? ifrm.contentDocument: 
+        ifrm.contentWindow.document;
+    ifrm.style.visibility = 'hidden';
+    ifrm.style.height = "10px"; // reset to minimal height ...
+    // IE opt. for bing/msn needs a bit added or scrollbar appears
+    ifrm.style.height = getDocHeight( doc ) + 4 + "px";
+    ifrm.style.visibility = 'visible';
+    }
+</script>
 </head>
 <body>
   
@@ -71,7 +91,7 @@
 </section>
 
 <!-- EDIT SRC HERE!! -->
-<iframe name="iframe1" id="iframe1" src="2020_05/page.html" frameborder="0" border="0" cellspacing="0" style="position: absolute; overflow:hidden;width:100%" wmode="transparent" scrolling="no"></iframe>
+<iframe name="iframe1" id="iframe1" src="2020_05/page.html" onload="setIframeHeight(this.id)" frameborder="0" border="0" cellspacing="0" style="position: absolute; overflow:hidden;width:100%" wmode="transparent" scrolling="no"></iframe>
 
 <script src="../assets/web/assets/jquery/jquery.min.js"></script><script src="../assets/web/assets/bootstrap3-migrate/bootstrap.min.js"></script><script src="../assets/smooth-scroll/smooth-scroll.js"></script><script src="../assets/masonry/masonry.pkgd.min.js"></script>
 <script src="../assets/imagesloaded/imagesloaded.pkgd.min.js"></script><script src="../assets/bootstrap-carousel-swipe/bootstrap-carousel-swipe.js"></script><script src="../assets/mobirise/js/script.js"></script><script src="../assets/mobirise-gallery/script.js"></script>
