--- a/portfolio/2020_07/page.html
+++ b/portfolio/2020_07/page.html
@@ -20,12 +20,12 @@
 <div class="gallery"><div class="gallery-title"><h1 class="hl-dark">Green shelter</h1><h2>Dwingelderveld</h2> <!-- album title -->
 
 	<div class="gallery-container"><div class="gallery-left"><div class="album_full">
-	<img src="01.jpg" alt="Photo description"/>
-	<img src="02.jpg" alt="Photo description"/>
-	<img class="lazyload" src="../../iframe/files/images/icons/placeholder.png" data-src="03.jpg" alt="Photo description"/>
-	<img class="lazyload" src="../../iframe/files/images/icons/placeholder.png" data-src="04.jpg" alt="Photo description"/>
-	<img class="lazyload" src="../../iframe/files/images/icons/placeholder.png" data-src="05.jpg" alt="Photo description"/>
-	<img class="lazyload" src="../../iframe/files/images/icons/placeholder.png" data-src="06.jpg" alt="Photo description"/>
+	<img style="width: 100%; height: 100%;" src="01.jpg" alt="Photo description"/>
+	<img style="width: 100%; height: 100%;" src="02.jpg" alt="Photo description"/>
+	<img style="width: 100%; height: 100%;" class="lazyload" src="../../iframe/files/images/icons/placeholder.png" data-src="03.jpg" alt="Photo description"/>
+	<img style="width: 100%; height: 100%;" class="lazyload" src="../../iframe/files/images/icons/placeholder.png" data-src="04.jpg" alt="Photo description"/>
+	<img style="width: 100%; height: 100%;" class="lazyload" src="../../iframe/files/images/icons/placeholder.png" data-src="05.jpg" alt="Photo description"/>
+	<img style="width: 100%; height: 100%;" class="lazyload" src="../../iframe/files/images/icons/placeholder.png" data-src="06.jpg" alt="Photo description"/>
 	</div></div>
 	<!-- end album photos -->
 	
