--- a/portfolio/2020_07/page.html
+++ b/portfolio/2020_07/page.html
@@ -17,7 +17,7 @@
 <div class="LOGO_STATIC"><img src="../../iframe/files/images/logo.svg" alt="Selwyn & Coline logo"></a></div>
 
 <!-- ############################################### Album photos -->
-<div class="gallery"><div class="gallery-title"><h1 class="hl-dark">Green shelter</h1><h2>Dwingelderveld</h2> <!-- album title -->
+<div class="gallery"><div class="gallery-title"><h1 class="hl-dark">Green shelter2</h1><h2>Dwingelderveld</h2> <!-- album title -->
 
 	<div class="gallery-container"><div class="gallery-left"><div class="album_full">
 	<img style="width: 100%; height: 100%;" src="01.jpg" alt="Photo description"/>
@@ -38,6 +38,8 @@
 	</p>
 	<div class="meta year"><b class="label">Photos taken</b>August 2020</div></div></div></div>
 <!-- ############################################## end album info -->
+
+<div id="padding_bottom" style="padding-bottom: 100px;"></div>
 
 </div></div></div></div></main></div></div>
 </body>
