padding square imgs added

--- a/portfolio/2020_06/page.html
+++ b/portfolio/2020_06/page.html
@@ -20,11 +20,11 @@
 <div class="gallery"><div class="gallery-title"><h1 class="hl-dark">Morning Bloom</h1><h2>Drunense Duinen</h2> <!-- album title -->
 
 	<div class="gallery-container"><div class="gallery-left"><div class="album_full">
-	<img src="01_hq.jpg" alt="Photo description"/>
-	<img src="04_hq.jpg" alt="Photo description"/>
-	<img class="lazyload" src="../../iframe/files/images/icons/placeholder.png" data-src="03_hq.jpg" alt="Photo description"/>
-	<img class="lazyload" src="../../iframe/files/images/icons/placeholder.png" data-src="02_hq.jpg" alt="Photo description"/>
-	<img class="lazyload" src="../../iframe/files/images/icons/placeholder.png" data-src="7.jpg" alt="Photo description"/>
+	<img style="width: 100%; height: 100%;" src="01_hq.jpg" alt="Photo description"/>
+	<img style="width: 100%; height: 100%;" src="04_hq.jpg" alt="Photo description"/>
+	<img style="width: 100%; height: 100%;" class="lazyload" src="../../iframe/files/images/icons/placeholder.png" data-src="03_hq.jpg" alt="Photo description"/>
+	<img style="width: 100%; height: 100%;" class="lazyload" src="../../iframe/files/images/icons/placeholder.png" data-src="02_hq.jpg" alt="Photo description"/>
+	<img style="width: 100%; height: 100%;" class="lazyload" src="../../iframe/files/images/icons/placeholder.png" data-src="7.jpg" alt="Photo description"/>
 	<!-- <img class="lazyload" src="../../iframe/files/images/icons/placeholder.png" data-src="Album_06_DrunenseDuinen/05.jpg" alt="Photo description"/>
 	<img class="lazyload" src="../../iframe/files/images/icons/placeholder.png" data-src="Album_06_DrunenseDuinen/06.jpg" alt="Photo description"/>-->
 	</div></div>
@@ -39,6 +39,8 @@
 	</p>
 	<div class="meta year"><b class="label">Photos taken</b>August 2020</div></div></div></div>
 <!-- ############################################## end album info -->
+
+<div id="square_img_padding_bottom" style="padding-bottom: 200px;"></div>
 
 </div></div></div></div></main></div></div>
 </body>
