--- a/portfolio/2020_07/page.html
+++ b/portfolio/2020_07/page.html
@@ -17,7 +17,7 @@
 <div class="LOGO_STATIC"><img src="../../iframe/files/images/logo.svg" alt="Selwyn & Coline logo"></a></div>
 
 <!-- ############################################### Album photos -->
-<div class="gallery"><div class="gallery-title"><h1 class="hl-dark">Green shelter2</h1><h2>Dwingelderveld</h2> <!-- album title -->
+<div class="gallery"><div class="gallery-title"><h1 class="hl-dark">Green Shelter</h1><h2>Dwingelderveld</h2> <!-- album title -->
 
 	<div class="gallery-container"><div class="gallery-left"><div class="album_full">
 	<img style="width: 100%; height: 100%;" src="01.jpg" alt="Photo description"/>
@@ -30,7 +30,7 @@
 	<!-- end album photos -->
 	
 	<!-- Album info -->
-	<div class="gallery-right"><div class="gallery-content" id="info"><h3>Green shelter</h3> <!-- album title -->
+	<div class="gallery-right"><div class="gallery-content" id="info"><h3>Green Shelter</h3> <!-- album title -->
 	<p>
 		Finding shelter in the forest during a drizzling summer weekend hike.
 	<br><br>
@@ -39,7 +39,7 @@
 	<div class="meta year"><b class="label">Photos taken</b>August 2020</div></div></div></div>
 <!-- ############################################## end album info -->
 
-<div id="padding_bottom" style="padding-bottom: 100px;"></div>
+<div id="square_img_padding_bottom" style="padding-bottom: 200px;"></div>
 
 </div></div></div></div></main></div></div>
 </body>
