--- a/portfolio/2020_05/page.html
+++ b/portfolio/2020_05/page.html
@@ -20,13 +20,13 @@
 <div class="gallery"><div class="gallery-title"><h1 class="hl-dark">Forest Glow</h1><h2>Mook Molenhoek</h2> <!-- album title -->
 
 <div class="gallery-container"><div class="gallery-left"><div class="album_full">
-<img src="01.jpg" alt="Photo description"/>
-<img src="02.jpg" alt="Photo description"/>
-<img class="lazyload" src="../../iframe/files/images/icons/placeholder.png" data-src="03.jpg" alt="Photo description"/>
-<img class="lazyload" src="../../iframe/files/images/icons/placeholder.png" data-src="04.jpg" alt="Photo description"/>
-<img class="lazyload" src="../../iframe/files/images/icons/placeholder.png" data-src="05.jpg" alt="Photo description"/>
-<img class="lazyload" src="../../iframe/files/images/icons/placeholder.png" data-src="06.jpg" alt="Photo description"/>
-<img class="lazyload" src="../../iframe/files/images/icons/placeholder.png" data-src="07.jpg" alt="Photo description"/>
+<img style="width: 100%; height: 100%;" src="01.jpg" alt="Photo description"/>
+<img style="width: 100%; height: 100%;" src="02.jpg" alt="Photo description"/>
+<img style="width: 100%; height: 100%;" class="lazyload" src="../../iframe/files/images/icons/placeholder.png" data-src="03.jpg" alt="Photo description"/>
+<img style="width: 100%; height: 100%;" class="lazyload" src="../../iframe/files/images/icons/placeholder.png" data-src="04.jpg" alt="Photo description"/>
+<img style="width: 100%; height: 100%;" class="lazyload" src="../../iframe/files/images/icons/placeholder.png" data-src="05.jpg" alt="Photo description"/>
+<img style="width: 100%; height: 100%;" class="lazyload" src="../../iframe/files/images/icons/placeholder.png" data-src="06.jpg" alt="Photo description"/>
+<img style="width: 100%; height: 100%;" class="lazyload" src="../../iframe/files/images/icons/placeholder.png" data-src="07.jpg" alt="Photo description"/>
 </div></div>
 <!-- end album photos -->
 
@@ -39,6 +39,8 @@
 </p>
 <div class="meta year"><b class="label">Photos taken</b>May 2020</div></div></div></div>
 <!-- ############################################## end album info -->
+
+<div id="square_img_padding_bottom" style="padding-bottom: 200px;"></div>
 
 </div></div></div></div></main></div></div>
 </body>
