square placeholder test

--- a/portfolio/2020_07/page.html
+++ b/portfolio/2020_07/page.html
@@ -22,10 +22,10 @@
 	<div class="gallery-container"><div class="gallery-left"><div class="album_full">
 	<img style="width: 100%; height: 100%;" src="01.jpg" alt="Photo description"/>
 	<img style="width: 100%; height: 100%;" src="02.jpg" alt="Photo description"/>
-	<img style="width: 100%; height: 100%;" class="lazyload" src="../../iframe/files/images/icons/placeholder.png" data-src="03.jpg" alt="Photo description"/>
-	<img style="width: 100%; height: 100%;" class="lazyload" src="../../iframe/files/images/icons/placeholder.png" data-src="04.jpg" alt="Photo description"/>
-	<img style="width: 100%; height: 100%;" class="lazyload" src="../../iframe/files/images/icons/placeholder.png" data-src="05.jpg" alt="Photo description"/>
-	<img style="width: 100%; height: 100%;" class="lazyload" src="../../iframe/files/images/icons/placeholder.png" data-src="06.jpg" alt="Photo description"/>
+	<img style="width: 100%; height: 100%;" class="lazyload" src="../../iframe/files/images/icons/placeholder_square.jpg" data-src="03.jpg" alt="Photo description"/>
+	<img style="width: 100%; height: 100%;" class="lazyload" src="../../iframe/files/images/icons/placeholder_square.jpg" data-src="04.jpg" alt="Photo description"/>
+	<img style="width: 100%; height: 100%;" class="lazyload" src="../../iframe/files/images/icons/placeholder_square.jpg" data-src="05.jpg" alt="Photo description"/>
+	<img style="width: 100%; height: 100%;" class="lazyload" src="../../iframe/files/images/icons/placeholder_square.jpg" data-src="06.jpg" alt="Photo description"/>
 	</div></div>
 	<!-- end album photos -->
 	
