--- a/portfolio/2020_06/page.html
+++ b/portfolio/2020_06/page.html
@@ -22,9 +22,9 @@
 	<div class="gallery-container"><div class="gallery-left"><div class="album_full">
 	<img style="width: 100%; height: 100%;" src="01_hq.jpg" alt="Photo description"/>
 	<img style="width: 100%; height: 100%;" src="04_hq.jpg" alt="Photo description"/>
-	<img style="width: 100%; height: 100%;" class="lazyload" src="../../iframe/files/images/icons/placeholder.png" data-src="03_hq.jpg" alt="Photo description"/>
-	<img style="width: 100%; height: 100%;" class="lazyload" src="../../iframe/files/images/icons/placeholder.png" data-src="02_hq.jpg" alt="Photo description"/>
-	<img style="width: 100%; height: 100%;" class="lazyload" src="../../iframe/files/images/icons/placeholder.png" data-src="7.jpg" alt="Photo description"/>
+	<img style="width: 100%; height: 100%;" class="lazyload" src="../../iframe/files/images/icons/placeholder_square.jpg" data-src="03_hq.jpg" alt="Photo description"/>
+	<img style="width: 100%; height: 100%;" class="lazyload" src="../../iframe/files/images/icons/placeholder_square.jpg" data-src="02_hq.jpg" alt="Photo description"/>
+	<img style="width: 100%; height: 100%;" class="lazyload" src="../../iframe/files/images/icons/placeholder_square.jpg" data-src="7.jpg" alt="Photo description"/>
 	<!-- <img class="lazyload" src="../../iframe/files/images/icons/placeholder.png" data-src="Album_06_DrunenseDuinen/05.jpg" alt="Photo description"/>
 	<img class="lazyload" src="../../iframe/files/images/icons/placeholder.png" data-src="Album_06_DrunenseDuinen/06.jpg" alt="Photo description"/>-->
 	</div></div>
