hidden waters added

--- a/index.html
+++ b/index.html
@@ -60,6 +60,11 @@ document.getElementById("Galleries_overlay").style.display = "none";
                         <div class="mbr-navbar__column">
                             <div class="mbr-section__container container mbr-section__container--last" style="padding-bottom: 60px; padding-top: 100px;">
                                 <div class="inside"><div class="mod_article albums first block" id="article-593"><div class="article_inner">
+
+                                    <div class="card" style="text-align: left;"><a class="card-link card-link--btn card-link--forestgreen" href="portfolio/2020_09.html"> <!-- add album link -->
+                                        <span class="card-title" style="font-size: 90%; text-align: left;">Hidden Waters</span></a><a href="portfolio/2020_09.html" style="display: block;"> <!-- add name & album link -->
+                                        <img src="covers/2020_09.jpg" alt="Landscape Photography Series"></a> <!-- add album cover -->
+                                    </div> 
                                     
                                     <div class="card" style="text-align: left;"><a class="card-link card-link--btn card-link--mossgreen" href="portfolio/2020_08.html"> <!-- add album link -->
                                         <span class="card-title" style="font-size: 90%; text-align: left;">Forest Ember</span></a><a href="portfolio/2020_08.html" style="display: block;"> <!-- add name & album link -->
@@ -261,7 +266,7 @@ document.getElementById("Galleries_overlay").style.display = "none";
     </div>
     <div class="mbr-section__container container mbr-section__container--middle">
         <div class="row">
-            <div class="mbr-article mbr-article--wysiwyg col-sm-8 col-sm-offset-2"><p><em>An early morning exploration of the familiar surroundings</em><br></p></div>
+            <div class="mbr-article mbr-article--wysiwyg col-sm-8 col-sm-offset-2"><p><em>An early morning exploration of familiar surroundings</em><br></p></div>
         </div>
     </div>
     <div class="mbr-section__container container mbr-section__container--last" style="padding-bottom: 124px;">
@@ -384,6 +389,11 @@ document.getElementById("Galleries_overlay").style.display = "none";
                         <div class="mbr-navbar__column">
                             <div class="mbr-section__container container mbr-section__container--last" style="padding-bottom: 60px; padding-top: 100px;">
                                 <div class="inside"><div class="mod_article albums first block" id="article-593"><div class="article_inner">
+
+                                    <div class="card" style="text-align: left;"><a class="card-link card-link--btn card-link--forestgreen" href="portfolio/2020_09.html"> <!-- add album link -->
+                                        <span class="card-title" style="font-size: 90%; text-align: left;">Hidden Waters</span></a><a href="portfolio/2020_09.html" style="display: block;"> <!-- add name & album link -->
+                                        <img src="covers/2020_09.jpg" alt="Landscape Photography Series"></a> <!-- add album cover -->
+                                    </div> 
                                     
                                     <div class="card" style="text-align: left;"><a class="card-link card-link--btn card-link--mossgreen" href="portfolio/2020_08.html"> <!-- add album link -->
                                         <span class="card-title" style="font-size: 90%; text-align: left;">Forest Ember</span></a><a href="portfolio/2020_08.html" style="display: block;"> <!-- add name & album link -->
