--- a/portfolio/2020_08/page.html
+++ b/portfolio/2020_08/page.html
@@ -38,7 +38,7 @@
 <!-- Album info -->
 <div class="gallery-right"><div class="gallery-content" id="info"><h3 >Forest Ember</h3> <!-- album title -->
 <p>
-	An early morning exploration of the familiar surroundings.
+	An early morning exploration of familiar surroundings.
 <br><br>
 	Photos were shot using a Canon A-1 with a Sigma 35-70mm f2.8-4 lens on Fujifilm C200 film.
 </p><div class="meta year"><b class="label">Photos taken</b>August 2020</div></div></div></div>
