hidden waters addad to main page

--- a/index.html
+++ b/index.html
@@ -257,23 +257,23 @@ document.getElementById("Galleries_overlay").style.display = "none";
 <!-- end Hasselblad logo -->
 
 <!-- Spotlight gallery 1 -->
-<section class="mbr-section mbr-section--relative mbr-section--fixed-size mbr-parallax-background" id="content5-9" data-rv-view="8" style="background-image: url(covers/2020_08_HQ.jpg);">
+<section class="mbr-section mbr-section--relative mbr-section--fixed-size mbr-parallax-background" id="content5-9" data-rv-view="8" style="background-image: url(covers/2020_09_HQ.jpg);">
     <div class="mbr-overlay" style="opacity: 0.6; background-color: rgb(0, 0, 0);"></div>
     <div class="mbr-section__container container mbr-section__container--first" style="padding-top: 124px;">
         <div class="mbr-header mbr-header--wysiwyg row">
-            <div class="col-sm-8 col-sm-offset-2"><h3 class="mbr-header__text">01: Forest Ember</h3></div>
+            <div class="col-sm-8 col-sm-offset-2"><h3 class="mbr-header__text">01: Hidden Waters</h3></div>
         </div>
     </div>
     <div class="mbr-section__container container mbr-section__container--middle">
         <div class="row">
-            <div class="mbr-article mbr-article--wysiwyg col-sm-8 col-sm-offset-2"><p><em>An early morning exploration of familiar surroundings</em><br></p></div>
+            <div class="mbr-article mbr-article--wysiwyg col-sm-8 col-sm-offset-2"><p><em>Following the flow of hidden waters fed by the late summer rains.</em><br></p></div>
         </div>
     </div>
     <div class="mbr-section__container container mbr-section__container--last" style="padding-bottom: 124px;">
         <div class="row">
             <div class="col-sm-8 col-sm-offset-2">
                 <div class="mbr-buttons mbr-buttons--center btn-inverse">
-                    <a class="mbr-buttons__btn btn btn-lg btn-success" style="background-color: #5d5030;border-color: #5d5030" href="portfolio/2020_08.html">
+                    <a class="mbr-buttons__btn btn btn-lg btn-success" style="background-color: #334f45;border-color: #334f45" href="portfolio/2020_09.html">
                         <span class="mdi-navigation-expand-more mbr-iconfont mbr-iconfont-btn"></span>V I E W &nbsp;I M A G E S&nbsp;</a></div>
             </div>
         </div>
@@ -283,26 +283,26 @@ document.getElementById("Galleries_overlay").style.display = "none";
 <!-- end Spotlight gallery 1 -->
 
 <!-- Spotlight gallery 2 -->
-<section class="mbr-section mbr-section--relative mbr-section--fixed-size mbr-parallax-background" id="content5-171" data-rv-view="14" style="background-image: url(covers/2020_07_HQ.jpg);">
+<section class="mbr-section mbr-section--relative mbr-section--fixed-size mbr-parallax-background" id="content5-171" data-rv-view="14" style="background-image: url(covers/2020_08_HQ.jpg);">
     <div class="mbr-overlay" style="opacity: 0.6; background-color: rgb(0, 0, 0);"></div>
     <div class="mbr-section__container container mbr-section__container--first" style="padding-top: 124px;">
         <div class="mbr-header mbr-header--wysiwyg row">
             <div class="col-sm-8 col-sm-offset-2">
-                <h3 class="mbr-header__text">02: Green shelter</h3>
+                <h3 class="mbr-header__text">02: Forest Ember</h3>
                 
             </div>
         </div>
     </div>
     <div class="mbr-section__container container mbr-section__container--middle">
         <div class="row">
-            <div class="mbr-article mbr-article--wysiwyg col-sm-8 col-sm-offset-2"><p><em>Finding shelter in the forest during a drizzling summer weekend hike.</em><br></p></div>
+            <div class="mbr-article mbr-article--wysiwyg col-sm-8 col-sm-offset-2"><p><em>An early morning exploration of familiar surroundings.</em><br></p></div>
         </div>
     </div>
     <div class="mbr-section__container container mbr-section__container--last" style="padding-bottom: 124px;">
         <div class="row">
             <div class="col-sm-8 col-sm-offset-2">
                 <div class="mbr-buttons mbr-buttons--center btn-inverse">
-                    <a class="mbr-buttons__btn btn btn-lg btn-success" style="background-color: #47462a;border-color: #47462a;" href="portfolio/2020_07.html">
+                    <a class="mbr-buttons__btn btn btn-lg btn-success" style="background-color: #5d5030;border-color: #5d5030;" href="portfolio/2020_08.html">
                     <span class="mdi-navigation-expand-more mbr-iconfont mbr-iconfont-btn"></span>V I E W &nbsp;I M A G E S&nbsp;</a></div>
             </div>
         </div>
